remove timestamp with zone from hsqldb